--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,11 @@
         </activity>
 
 
+
+
         <activity android:name=".LoginActivity"
-            android:screenOrientation="portrait"/>
+            android:label="@string/app_name">
+        </activity>
 
     </application>
 
